notify-python (0.1.0-2) UNRELEASED; urgency=low

  [ Piotr Ozarowski ]
  * Added XS-Vcs-Svn field

  [ Loic Minier ]
  * Misc cleanups.
  * Update URL in copyright.
  * Set XS and XB-PV instead of debian/pyversions.

 -- Loic Minier <lool@dooz.org>  Mon, 25 Jun 2007 13:21:04 +0200

notify-python (0.1.0-1) unstable; urgency=low

  * Initial release (Closes: #366863)

 -- Gustavo Franco <stratus@debian.org>  Tue,  4 Jul 2006 17:00:55 -0300
