@@ -7,8 +7,9 @@ notify-python (0.1.0-2) UNRELEASED; urgency=low
   * Misc cleanups.
   * Update URL in copyright.
   * Set XS and XB-PV instead of debian/pyversions.
+  * Only call dh_pysupport and not dh_python; fixup CDBS rule.
 
- -- Loic Minier <lool@dooz.org>  Mon, 25 Jun 2007 13:21:04 +0200
+ -- Loic Minier <lool@dooz.org>  Mon, 25 Jun 2007 13:25:18 +0200
 
 notify-python (0.1.0-1) unstable; urgency=low
 
